--- a/ui/client/src/components/contentComponent/style.css
+++ b/ui/client/src/components/contentComponent/style.css
@@ -1,11 +1,49 @@
-#star {
-  text-align: center;
-  font-size: 100px;
-  line-height: 1500px;
-  color: #ddd;
-}
-
 #content {
   text-align: center;
-  margin: 5% auto;
+  margin: 15% auto;
+  padding-top: 35%;
+  /* font-family: 'Niconne', cursive; */
+}
+#content h1 {
+  font-size: 3rem;
+  letter-spacing: 2px;
+}
+.benefits-container {
+  margin-top: 5%;
+}
+.benefits {
+  display: inline-block;
+  width: 33.33%;
+  height: 50%;
+  padding: 40px;
+  float: left;
+  text-align: center;
+  /* text flowing out of div */
+  overflow-wrap: break-word;
+  letter-spacing: 1.2px;
+  -webkit-text-size-adjust: none;
+}
+.benefits p {
+  /* font-size: 1.5rem; */
+}
+@media screen and (max-width: 1054px) {
+  .benefits {
+    width: 100%;
+    height: 66vh;
+  }
+}
+
+/* @media screen and (max-width: 500px) {
+  .benefits {
+    width: 100%;
+    height: 80vh;
+  }
+} */
+h5 {
+  height: 15%;
+  margin: 40px auto;
+  font-size: 2rem;
+}
+h1 {
+  /* letter-spacing: 6px; */
 }
