--- a/ui/client/src/components/entry/style.css
+++ b/ui/client/src/components/entry/style.css
@@ -11,12 +11,13 @@ body {
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Crete Round', serif;
+  /* font-family: 'Arbutus Slab', serif; */
+  font-family: 'Varela', sans-serif;
   font-size: 1rem;
   line-height: 1.5;
   color: #333;
   overflow-x: hidden;
-  /* background-color: rgb(232, 213, 213); */
+  background-color: WHITE;
 }
 /* 
 #navbar {
